Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80650

Qt 6(dev) branch: Assistant crashes on startup

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.1.0 RC
    • 6.0.0
    • Tools: Assistant
    • None
    • All
    • 0410ded7a798ad61ae517d94b8b99b5d28c941fb (qt/qttools/dev)

    Description

      Apparently due to an endless recursion HelpViewer::doSetSource() calling QTextBrowser::setSource().

      Could be caused by a behavioral change of QUrl or somehow by "Fix Qt6 build" 6b2f32f3dc9de965801927a4bc5d970028a318a6 https://codereview.qt-project.org/c/qt/qttools/+/267464 .

      Attachments

        1. qtbug80650_diag.diff
          3 kB
        2. qtbug80650_log.txt
          47 kB
        3. qtbug80650_stack.txt
          158 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes