Qt Assistant: Fix startup crash

Call the proper base implementation of QTextBrowser:doSetSource().
Amends 6b2f32f3dc9de965801927a4bc5d970028a318a6.

Fixes: QTBUG-80650
Change-Id: Ief7a752ea6660e0d455aae2a11d4f54ac9797c2b
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>